<resources>
    <string name="app_name">Contest place</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="check">Check to register as company</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_prikaz_ponudbe_podjetja">Challenge</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="title_activity_company_main">CompanyMainActivity</string>
    <string name="uporabnikovoIme">Janez Dijak</string>
    <string name="login">Log in</string>
    <string name="login_new_account">I don\'t have an account</string>
    <string name="login_is_company">Company?</string>
    <string name="login_email">email</string>
    <string name="login_password">Password</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="register">register</string>
    <string name="company_new_offer">New offer</string>
    <string name="rules">rules</string>
    <string name="hashtag">hashtag</string>
    <string name="add_offer">Add offer</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="takePicture">Challenge accepted!</string>
    <string name="pictureThumbnail">pictureThumbnail</string>
    <string name="offerInfo">Click on offer to show</string>
    <string name="ButtonChallengeAccepted">Challenege Accepted!</string>
    <string name="caption">Caption:</string>
    <string name="buttonShareOnFB">Share</string>
    <string name="textRetakePhoto">Retake Photo</string>
    <string name="app_id">1512806935706528</string>
    <string name="title_activity_splash_creen">SplashCreen</string>
</resources>
